--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,6 +1,6 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/mytgei3586/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/mytgei3586/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/mytgei3586/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/mytgei3586/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/mytgei3586/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/mytgei3586/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/mytgei3586/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/mytgei3586/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/mytgei3586/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/mytgei3586/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/mytgei3586/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/mytgei3586/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/mytgei3586/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/mytgei3586/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/mytgei3586/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/mytgei3586/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/mytgei3586/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/mytgei3586/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/mytgei3586/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/mytgei3586/www/master/t/djy/12a.jpg" title="头条"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://github.com/mytgei3586/www/blob/master/README.md#1" target="_blank">翻墙</a> | <a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/vdhG75Ez1eTyeZN/raw/master/hG75Ez1eTyeZN.webm" target="_blank">归途</a> | <a href="https://gitlab.com/szzdlab/vdYongHeng-360p/raw/master/YongHeng-360p.webm" target="_blank">永恒</a> | <a href="https://gitlab.com/szzdlab/vdLijianhui-200804-720/raw/master/Lijianhui-200804-720.webm" target="_blank">回归</a> | <a href="https://gitlab.com/szzdlab/vddmt/raw/master/dmt.webm" target="_blank">江鬼</a> | <a href="https://gitlab.com/szzdlab/vdszt/raw/master/szt.webm" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/vdUc6y/raw/master/Uc6y.webm" target="_blank">渐冻人</a> | <a href="https://gitlab.com/szzdlab/vd425/raw/master/425.webm" target="_blank">四二五</a> | <a href="https://gitlab.com/szzdlab/vdlin-720p/raw/master/lin-720p.webm" target="_blank">世界小姐</a> | <a href="https://gitlab.com/szzdlab/vdwnrl/raw/master/wnrl.webm" target="_blank">为你而来</a> | <a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank">终级目的</a> | <a href="https://gitlab.com/szzdlab/vdmtdwh/raw/master/mtdwh.webm" target="_blank">漫谈党文化</a></p><p><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/vdzfzx/raw/master/zfzx.webm" target="_blank">伪火</a> | <a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank">剖析</a> | <a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank">旅程</a> | <a href="https://gitlab.com/szzdlab/vd5-YiSu_MH-360p/raw/master/5-YiSu_MH-360p.webm" target="_blank">义诉</a> | <a href="https://gitlab.com/szzdlab/vd5N.8/raw/master/5N.8.webm" target="_blank">罪恶</a> | <a href="https://gitlab.com/szzdlab/vdTdowhauWx9WiM/raw/master/TdowhauWx9WiM.webm" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/vd1-Xuezhongmei_MH-360p/raw/master/1-Xuezhongmei_MH-360p.webm" target="_blank">雪中梅</a> | <a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank">歌唱家</a> | <a href="https://gitlab.com/szzdlab/vdhuangxiaomin-tuidang/raw/master/huangxiaomin-tuidang.webm" target="_blank">奥运名将</a> | <a href="https://gitlab.com/szzdlab/vdwm/raw/master/wm.webm" target="_blank">告诉未来</a> | <a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank">红朝阴谋</a> | <a href="https://gitlab.com/szzdlab/vdfy/raw/master/fy.webm" target="_blank">风雨天地行</a></p></td></tr>
-<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12563699.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/11/Untitled1111-1-320x200.jpg"><p align="center">【新闻大家谈】舞弊八大证据和服务器疑云</p></a>
-<a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12563699.md#1" title="【新闻大家谈】舞弊八大证据和服务器疑云""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/Untitled1111-1-320x200.jpg">&nbsp;</a>
+<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12563699.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/11/download-37-320x200.jpg"><p align="center">【新闻大家谈】舞弊八大证据和服务器疑云</p></a>
+<a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12563699.md#1" title="【新闻大家谈】舞弊八大证据和服务器疑云""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/download-37-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12563284.md#1" title="【大选更新11·20】“舞弊是民主党政变”""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/11-53-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12562667.md#1" title="田云：川普3律师重磅发言 直击舞弊和假新闻""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229684615-1-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12563545.md#1" title="民营企业家李怀庆遭重判20年 舆论反弹""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/Em9HLHVWEAASp5e-320x200.jpg">&nbsp;</a>
@@ -13,12 +13,12 @@
 <a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/19/n12562150.md#1" title="【重磅】川普律师公布八大选举舞弊指控""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/000_8VH7VF-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/19/n12561412.md#1" title="【一线采访】青岛滨海学院封校 学生：要疯了""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1229036964-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/mytgei3586/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://mytgei3586.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>3分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/15/n12550992.md#1">大卖场卤味熟食能买吗？店家不说的真相</a><br>
-:clock8: <em>6分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12563699.md#1">【新闻大家谈】舞弊八大证据和服务器疑云</a><br>
-:clock8: <em>6分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12563853.md#1">用Ibotta应用在沃尔玛买食品 可获感恩节免费餐</a><br>
-:clock8: <em>26分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12563993.md#1">特殊感应器赋予机械手多维触感</a><br>
-:clock8: <em>34分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12563969.md#1">新型降温技术灵感来自骆驼</a><br>
-:clock8: <em>38分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12563901.md#1">川普传唤密歇根州共和党领袖到白宫会面</a><br>
+:clock8: <em>3分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12564010.md#1">乔治亚重计票不比对签名 川普团队拒承认结果</a><br>
+:clock8: <em>11分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12562646.md#1">天津本土病例急增 滨海新区全员检测</a><br>
+:clock8: <em>14分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12563699.md#1">【新闻大家谈】舞弊八大证据和服务器疑云</a><br>
+:clock8: <em>21分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/15/n12550992.md#1">大卖场卤味熟食能买吗？店家不说的真相</a><br>
+:clock8: <em>24分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12563853.md#1">用Ibotta应用在沃尔玛买食品 可获感恩节免费餐</a><br>
+:clock8: <em>44分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12563993.md#1">特殊感应器赋予机械手多维触感</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/18/n12558748.md#1">习近平前脚刚走 南京前首富杨宗义被查</a><br>
 <a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/19/n12560222.md#1">中共喉舌发长文捧习 分析：个人崇拜再升级</a><br>
@@ -38,7 +38,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 367,896,868 人
+!共 367,897,462 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
