--- a/gb/news2008.md
+++ b/gb/news2008.md
@@ -2,7 +2,7 @@
 <tr><td width="742"><h3><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/15/n12550992.md#1" target="_blank">大卖场卤味熟食能买吗？店家不说的真相</a><br></h3><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/15/n12550992.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/shutterstock_1785263651-320x200.jpg" align ="left"></a>大多数量贩店销售的熟食与烘焙品，都是采前店后厂的模式天天新鲜制作。卖场会聘任许多专业师傅，从原物料进货开始，由总公司主导主要菜单与教育训练，使每家分店都能维持稳定、统一的口感与滋味。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月20日 10:53 PM	</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12563116.md#1" target="_blank">美国最北端城市迎来今年最后一次日落</a><br></h3><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12563116.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/Utq_seaicecam_current-1-1376x1032-150x120.jpg" align ="left"></a>美国最北端城市是位于阿拉斯加州北部的乌特恰维克（Utqia?vik）。尽管2020年尚未结束，但这个人口仅有几千人的城镇已经迎来了今年的最后一次日落。当地居民要想再看日落，还得等上两个多月。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月20日 3:11 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12562749.md#1" target="_blank">美国娇小腊肠犬吓退山狮 救了狗朋友一命</a><br></h3><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12562749.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/shutterstock_557379130-150x120.jpg" align ="left"></a>小狗不但对人忠诚，对同类也是如此。在美国科罗拉多州最近就有一只体型娇小的腊肠犬在见到狗朋友被山狮攻击时，奋不顾身地赶走山狮，救了朋友一命，而它也因为这个善举被誉为英雄。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月20日 2:06 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/17/n12556573.md#1" target="_blank">中医1招根治喉咙痛！扁桃腺炎、咽喉炎都能救</a><br></h3><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/17/n12556573.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/licorice-tea-2-hnw-health11-150x120.jpg" align ="left"></a>扁桃腺炎、咽喉炎都让你喉咙痛，吃东西喝水难以下咽。怎么救？在扁桃腺炎、咽喉炎的急性期，中医可以立刻让喉咙止痛，甚至于很难治的扁桃腺炎也能治好。变成了慢性的咽喉炎或扁桃腺炎了，怎么办？中医有一个简单方法，能根治喉咙痛，消炎。甘草水，就是用甘草泡茶。甘草第一能够消炎，第二能补脾胃......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月20日 2:00 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/17/n12556573.md#1" target="_blank">中医1茶饮根治喉咙痛！扁桃腺炎、咽喉炎都能救</a><br></h3><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/17/n12556573.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/licorice-tea-2-hnw-health11-150x120.jpg" align ="left"></a>扁桃腺炎、咽喉炎都让你喉咙痛，吃东西喝水难以下咽。怎么救？在扁桃腺炎、咽喉炎的急性期，中医可以立刻让喉咙止痛，甚至于很难治的扁桃腺炎也能治好。变成了慢性的咽喉炎或扁桃腺炎了，怎么办？中医有一个简单方法，能根治喉咙痛，消炎。甘草水，就是用甘草泡茶。甘草第一能够消炎，第二能补脾胃......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月20日 2:00 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/19/n12560005.md#1" target="_blank">好日子到头 加拿大公寓市场疲软</a><br></h3><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/19/n12560005.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/shutterstock_311650670-150x120.jpg" align ="left"></a>自中共病毒肺炎疫情爆发后，加拿大共管公寓市场好像哪里都开始不对劲了：施工质量大不如以前，保险成本飙升，租金持续下跌，租房竞争激烈，公寓难脱手，楼价呈下跌迹像，等等。对于公寓业主，尤其是投资者来说，好日子已到头，未来要准备好过苦日子了。
 公寓租房市场行情普遍惨淡
 Rentals租房网最新数据显示，10月份全国多数大城.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月20日 8:46 AM			</td></tr>
